--- a/views/admin/orderFullDetails.ejs
+++ b/views/admin/orderFullDetails.ejs
@@ -107,7 +107,7 @@
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Understood</button>
+              <button type="button" class="btn btn-primary">PROCEED</button>
             </div>
           </div>
         </div>
