--- a/views/users/checkout.ejs
+++ b/views/users/checkout.ejs
@@ -77,7 +77,7 @@
                       <div class="col-lg-12 col-md-12 col-sm-12">
                         <div style="width: 500px;" class="card mb-3 rounded shadow">
                           <!-- Move the close button to the top-right corner -->
-                          <button type="button" class="close" aria-label="Edit" style="position: absolute; top: 10px; right: 10px;">
+                          <button type="button" class="close" aria-label="Edit" style="position: absolute; top: 10px; right: 10px;" data-bs-toggle="modal" data-bs-target="#editAddressAdmin">
                             <i class="bi bi-pencil-square" aria-hidden="true" onclick="editAddress('<%= address._id %>')"></i>
                           </button>
                           <div class="custom-label p-3 m-2" onclick="handleCardClick(this)" >
@@ -96,10 +96,10 @@
                   </div>
                   
                 <% } ) %>
-                <button type="button" class="btn btn-primary"  style="margin-left: 10px;">Add New Address</button>
+                <button type="button" class="btn btn-primary"  style="margin-left: 10px;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Address</button>
              <% }else{ %>
 
-              <button type="button" class="btn btn-primary"  style="margin-left: 10px;">Add New Address</button>
+              <button type="button" class="btn btn-primary"  style="margin-left: 10px;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">Add New Address</button>
 
 
             <% } %>
@@ -210,21 +210,166 @@
   
                 <!-- End .summary -->
               </aside>
+
+
   
-              <!-- End .col-lg-3 -->
+             
             </div>
           </form>
-  
-          <!-- End .row -->
+
+
+
+
+<!--====================================================================addAddress================================================================= -->
+
+          <!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="margin-top: 130px;">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="/checkoutAddress" method="post" onsubmit="return validateForm()" class="border rounded p-4" style="width: 530px;">
+          <div class="form-group">
+              <div class="row">
+                  <div class="col">
+                      <label for="FullName">Full Name *</label>
+                      <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px" placeholder="fullname">
+                      <span class="error-message text-danger" id="fullNameError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="country">Country *</label>
+                      <input type="text" class="form-control" id="country" name="country" style="height: 37px">
+                      <span class="error-message text-danger" id="countryError"></span>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                      <label for="city">City *</label>
+                      <input type="text" class="form-control" id="city" name="city" style="height: 37px">
+                      <span class="error-message text-danger" id="cityError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="state">State *</label>
+                      <input type="text" class="form-control" id="state" name="state" style="height: 37px">
+                      <span class="error-message text-danger" id="stateError"></span>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                      <label for="pinCode">Pin Code *</label>
+                      <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px">
+                      <span class="error-message text-danger" id="pinCodeError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="phone">Mobile *</label>
+                      <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px">
+                      <span class="error-message text-danger" id="phoneError"></span>
+                  </div>
+              </div>
+          </div>
+
+         
+
+          
+
+          <!-- <button type="submit" class="btn  mx-auto rounded" style="background-color: rgb(70, 70, 215); color: #fff;">Register</button> -->
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn rounded" style="background-color: rgb(199, 37, 37); " data-bs-dismiss="modal">Close</button>
+        <button type="submit" class="btn rounded" style="background-color: rgb(80, 80, 222);" >Register</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- ===================================================================modalEditAddressAdmin==================================================================== -->
+
+
+<div class="modal fade" id="editAddressAdmin" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content" style="margin-top: 130px;">
+      <div class="modal-header">
+        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form action="/editCheckoutAddress" method="post" onsubmit="return validateForm()" class="border rounded p-4" style="width: 530px;">
+          <div class="form-group">
+              <div class="row">
+                  <div class="col">
+                      <label for="FullName">Full Name *</label>
+                      <input type="text" class="form-control" id="FullName" name="fullName" style="height: 37px"  >
+                      <span class="error-message text-danger" id="fullNameError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="country">Country *</label>
+                      <input type="text" class="form-control" id="country" name="country" style="height: 37px">
+                      <span class="error-message text-danger" id="countryError"></span>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                      <label for="city">City *</label>
+                      <input type="text" class="form-control" id="city" name="city" style="height: 37px">
+                      <span class="error-message text-danger" id="cityError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="state">State *</label>
+                      <input type="text" class="form-control" id="state" name="state" style="height: 37px">
+                      <span class="error-message text-danger" id="stateError"></span>
+                  </div>
+              </div>
+              <div class="row">
+                  <div class="col">
+                      <label for="pinCode">Pin Code *</label>
+                      <input type="text" class="form-control" id="pinCode" name="pincode" style="height: 37px">
+                      <span class="error-message text-danger" id="pinCodeError"></span>
+                  </div>
+                  <div class="col">
+                      <label for="phone">Mobile *</label>
+                      <input type="tel" class="form-control" id="phone" name="mobile" style="height: 37px">
+                      <span class="error-message text-danger" id="phoneError"></span>
+                  </div>
+              </div>
+          </div>
+
+         
+
+          
+
+          
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn rounded" style="background-color: rgb(199, 37, 37); " data-bs-dismiss="modal">Close</button>
+       <button type="submit" class="btn  mx-auto rounded" style="background-color: rgb(70, 70, 215); color: #fff;">Register</button> 
+      </div>
+    </div>
+  </div>
+</div>
+
+
+
+        
         </div>
   
-        <!-- End .container -->
+       
       </div>
   
-      <!-- End .checkout -->
+     
     </div>
+
+
+<!--====================================================================addAddress================================================================= -->
+
+                                          
+
+
+
   
-    <!-- End .page-content -->
+    
   </main>
   <!-- End .main -->
   
