--- a/views/users/orderDetails.ejs
+++ b/views/users/orderDetails.ejs
@@ -105,7 +105,7 @@
                 <button
                   type="button"
                   class="btn btn-outline-primary-2 btn-order btn-block"
-                  data-bs-toggle="modal" data-bs-target="#exampleModal"
+                  data-bs-toggle="modal" data-bs-target="#cancelModal"
                 >
                   <span class="btn-text">Cancel Order</span>
                   <span class="btn-hover-text"
@@ -150,9 +150,9 @@
 
               <% }else{ %>
 
-            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal fade" id="cancelModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
               <div class="modal-dialog">
-                <div class="modal-content">
+                <div class="modal-content" style="margin-top: 200px;">
                   <div class="modal-header p-5">
                     <h5  id="exampleModalLabel">Are you sure?</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -160,7 +160,7 @@
                   <div class="modal-body p-5">
                     <form action="/orderCancel" method="post">
                       <input type="hidden" value="<%= orders._id %>" name="orderid">
-                      <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice">
+                      <input type="hidden" value="<%= orders.totalAmount %>" name="totalPrice"> 
 
                       
 
@@ -169,8 +169,8 @@
                         <textarea name="reason" class="form-control" id="message-text" placeholder="eg: I changed my mind"></textarea>
                       </div>
                       <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">No</button>
-                        <button type="submit" class="btn btn-primary">Yes</button>
+                        <button type="button"   style="background-color: grey;border-radius: 5px; width: 100px; height: 40px;" data-bs-dismiss="modal">No</button>
+                        <button type="submit" style="background-color: rgb(2, 116, 255);border-radius: 5px; width: 130px; height: 40px;">Yes</button>
                       </div>
                     </form>
                   </div>
